--- a/content/dota_addons/warofkings/panorama/styles/custom_game/custom_hud.css
+++ b/content/dota_addons/warofkings/panorama/styles/custom_game/custom_hud.css
@@ -6,7 +6,24 @@
 #Contents Button{
 	visibility: visible;
 }
+#ClassAbilityPanel{
+	width: 60px;
+	height: 60px;
+	margin-bottom: 22%;
+	vertical-align: bottom;
+	transition-property:pre-transform-scale2d;
+	transition-duration: 0.15s;
+	transition-timing-function:ease-in;
+	box-shadow: 0px 0px 11px #216EE1; 
+	horizontal-align:right;
+	margin-right: 5px;
+	border-radius: 50px;
+	pre-transform-scale2d:0.9;
+}
 
+#ClassAbilityPanel:Hover{
+	pre-transform-scale2d:1;
+}
 #ConnectorsContainer
 {
 	width: 100%;
@@ -2168,7 +2185,7 @@ DropDownMenu{
 	align:center center;
 	width: 100%;
 	height: 100%;
-	background-color: gradient( linear, 25% 20%, 40% 65%, from( #66ACE2  ), to( #1F78BD) );
+	background-color: gradient( linear, 25% 20%, 40% 65%, from( #3A3D40  ), to( #151D25) );
 	z-index: 99999;
 	transition-duration: .35s;
 	transition-property: opacity;
@@ -2960,12 +2977,14 @@ DropDownMenu{
 	z-index: -10;
 }
 .InventoryButton{
-	width: 61px;
-	height: 59px;
+	width: 52px;
+	height: 52px;
 	saturation:1;
 	tooltip-position:top;
 	transition-duration: .35s;
 	transition-property: saturation;
+	margin-right: 5px;
+	margin-left: 5px;
 } 
 
 .InventoryButton:disabled{
@@ -2992,7 +3011,7 @@ DropDownMenu{
 
 .InventoryButton Label{
 	color: white;
-	font-size: 22px;
+	font-size: 21px;
 	vertical-align: bottom;
 	horizontal-align:right;
 	text-shadow: 2px 2px 0px 1.0 #00000090;
@@ -3171,7 +3190,10 @@ DropDownMenu{
 #QuestMainContainer.Hidden{
 	visibility: collapse;
 }
-
+#PlayerName{
+	color: white;
+	letter-spacing: 0.8px;
+}
 #QuestContainer{
 	width: 500px;
 	height: 450px;
@@ -3554,8 +3576,8 @@ DropDownMenu{
 }
 .drop_chance .UniqueBonusBackgroundIcon{
 	background-image: url('file://{images}/war_of_kings/chestDrop.png');
-	width: 160px;
-	height: 100px;
+	width: 200px;
+	height: 160px;
 } 
 
 .creep_not_use .UniqueBonusBackgroundIcon{
